fix: 깐부 검색 조회 조회 한번 제외